# ZX3D95CE01S-TR-4848

./: CMakeLists.txt  README.md  sdkconfig
components/lvgl/env_support/cmake/: esp.cmake
components/screen/: CMakeLists.txt
components/screen/controller_driver/gc9a01/: gc9a01.c
components/screen/controller_driver/ili9488/: ili9488.c
components/screen/controller_driver/ili9488n/: ili9488n.c
components/screen/controller_driver/st7789/: st7789.c
components/screen/controller_driver/st7796/: st7796.c
components/screen/interface_driver/: scr_interface_driver.c
components/touch_panel/: touch_panel.c
components/touch_panel/calibration/: touch_calibration.c
components/touch_panel/ft5x06/: ft5x06.c
main/: CMakeLists.txt  board.h  main.c  screen.c  sht20_test.c
